--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>마들렌 지원 페이지</h1>
+<p>email: uuzaza@naver.com</p>
 </body>
 </html>
